# kurzgesagt-script-generator

./: .env.example  .gitignore  AUDIO_DURATION_UPDATES.md  DAVINCI_RESOLVE_GUIDE.md  GOOGLE_DRIVE_SETUP.md  README.md  inspire.md  main.py  pyproject.toml  test_video_download.py  timeline_example.json
.github/workflows/: ci.yml
scripts/: download_video.py
src/kurzgesagt/: config.py
src/kurzgesagt/core/: __init__.py  audio_generator.py  google_drive_uploader.py  image_generator.py  project_manager.py  prompt_optimizer.py  resolve_exporter.py  scene_parser.py  script_generator.py  video_generator.py
src/kurzgesagt/core/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/kurzgesagt/models/: __init__.py  enums.py  project.py  scene.py
src/kurzgesagt/ui/: app.py
src/kurzgesagt/utils/: __init__.py  file_handlers.py  logging.py  validators.py
templates/: confirmations.md.j2  project_setup.md.j2  script_structure.md.j2
templates/models/: kling_2_5.md.j2  veo_3_2.md.j2
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/mocks/: anthropic_mock.py
tests/unit/: test_audio_generator.py  test_image_generator.py  test_models.py  test_project_manager.py  test_prompt_optimizer.py  test_providers.py  test_resolve_exporter.py  test_scene_parser.py  test_scene_parser_repair.py  test_script_generator.py  test_utils.py  test_video_generator.py
